# homework_35_2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  django  docker-compose.yml  docker_commands.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: celery.py  settings.py  urls.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_utils_py.html  z_23dba4a7d08eb56b_load_mypedia_py.html  z_809601a66e33f4cc_create_superuser_py.html  z_809601a66e33f4cc_load_users_and_groups_py.html  z_b9ac88c4ccde999a_models_py.html  z_b9ac88c4ccde999a_paginators_py.html  z_b9ac88c4ccde999a_serializers_py.html  z_b9ac88c4ccde999a_tasks_py.html  z_b9ac88c4ccde999a_tests_py.html  z_b9ac88c4ccde999a_urls_py.html  z_b9ac88c4ccde999a_validators_py.html  z_b9ac88c4ccde999a_views_py.html  z_f6c68bdc9becfc1e_models_py.html  z_f6c68bdc9becfc1e_permissions_py.html  z_f6c68bdc9becfc1e_serializers_py.html  z_f6c68bdc9becfc1e_tasks_py.html  z_f6c68bdc9becfc1e_tests_py.html  z_f6c68bdc9becfc1e_urls_py.html  z_f6c68bdc9becfc1e_views_py.html
mypedia/: admin.py  apps.py  models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
mypedia/fixtures/: mypedia.json  payments.json
mypedia/management/commands/: load_mypedia.py
mypedia/migrations/: 0001_initial.py  0002_alter_lesson_course.py  0003_course_owner_lesson_owner_payment.py  0004_rename_user_payment_owner.py  0005_subscription.py  0006_alter_lesson_course.py  0007_payment_link_payment_status.py  0008_payment_session_id.py  0009_alter_payment_amount.py  0010_course_updated_at_lesson_updated_at.py
nginx/: Dockerfile  nginx.conf
src/: utils.py
users/: admin.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  views.py
users/fixtures/: groups.json  payments.json  users.json
users/management/commands/: create_superuser.py  load_payments.py  load_users.py  load_users_and_groups.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_options.py  0004_delete_payment.py
