[project]
name = "alyautdinov-ruslan-hw-43"
version = "0.1.0"
description = ""
authors = [
    {name = "Аляутдинов Руслан",email = "rusalyautdinov@yandex.ru"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "django-filter (>=24.3,<25.0)",
    "djangorestframework-simplejwt (>=5.4.0,<6.0.0)",
    "drf-yasg (>=1.21.8,<2.0.0)",
    "django-filter (>=24.3,<25.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "stripe (>=11.5.0,<12.0.0)",
    "celery (>=5.4.0,<6.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "coverage (>=7.6.12,<8.0.0)",
    "django-celery-beat (>=2.7.0,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
isort = "^6.0.0"
black = "^25.1.0"
mypy = "^1.15.0"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.black]
line-length = 119

[tool.isort]
line_length = 119

[tool.coverage.run]
omit = ["__init__.py", "*/migrations/*", "config/*", "apps.py", "admin.py", "manage.py"]
